--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifecycleActivity18102021">
-        <activity android:name=".MainActivity"
+        <activity android:name=".MainActivity3"
+            android:taskAffinity=""
+            android:launchMode="singleTask">
+        </activity>
+        <activity android:name=".MainActivity2" />
+        <activity
+            android:name=".MainActivity"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
